Firefox (wayland) crash in wayland_platform
Thread 24 "Compositor" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffe3f6b700 (LWP 5413)]
0x00007fffdfde3f4f in update_buffers (dri2_surf=dri2_surf@entry=0x7fffd3b47000) at ../mesa-19.3.0/src/egl/drivers/dri2/platform_wayland.c:664
664 if (dri2_surf->base.Width != dri2_surf->wl_win->width ||
#0 0x00007fffdfde3f4f in update_buffers (dri2_surf=dri2_surf@entry=0x7fffd3b47000) at ../mesa-19.3.0/src/egl/drivers/dri2/platform_wayland.c:664
#1 0x00007fffdfde4334 in image_get_buffers (driDrawable=driDrawable@entry=
0x7fffd3888900, format=<optimized out>, stamp=stamp@entry=0x7fffd3888930, loaderPrivate=loaderPrivate@entry=0x7fffd3b47000, buffer_mask=buffer_mask@entry=1, buffers=buffers@entry=0x7fffe3f6a150) at ../mesa-19.3.0/src/egl/drivers/dri2/platform_wayland.c:799
#2 0x00007fffde6b5cc8 in intel_update_image_buffers (drawable=0x7fffd3888900, brw=0x7fffd139d030) at ../mesa-19.3.0/src/mesa/drivers/dri/i965/brw_context.c:1870
#3 0x00007fffde6b5cc8 in intel_update_renderbuffers (context=context@entry=0x7fffd5751130, drawable=drawable@entry=0x7fffd3888900)
at ../mesa-19.3.0/src/mesa/drivers/dri/i965/brw_context.c:1499
#4 0x00007fffde6b6455 in intel_prepare_render (brw=brw@entry=0x7fffd139d030) at ../mesa-19.3.0/src/mesa/drivers/dri/i965/brw_context.c:1520
#5 0x00007fffde6b1f93 in brw_clear (ctx=0x7fffd139d030, mask=2) at ../mesa-19.3.0/src/mesa/drivers/dri/i965/brw_clear.c:257
#6 0x00007ffff1b353c6 in mozilla::gl::GLContext::raw_fClear(unsigned int) () at /usr/lib64/firefox/libxul.so
#7 0x00007ffff1b019c9 in mozilla::layers::CompositorOGL::BeginFrame(mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&, mozilla::Maybe<mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&) ()
at /usr/lib64/firefox/libxul.so
#8 0x00007ffff1b016fb in mozilla::layers::CompositorOGL::BeginFrameForWindow(mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&, mozilla::Maybe<mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&) () at /usr/lib64/firefox/libxul.so
#9 0x00007ffff1bf6628 in mozilla::layers::LayerManagerComposite::Render(mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::IntRegionTyped<mozilla::gfx::UnknownUnits> const&) () at /usr/lib64/firefox/libxul.so
#10 0x00007ffff1bf4ac9 in mozilla::layers::LayerManagerComposite::UpdateAndRender() () at /usr/lib64/firefox/libxul.so
#11 0x00007ffff1bf4802 in mozilla::layers::LayerManagerComposite::EndTransaction(mozilla::TimeStamp const&, mozilla::layers::LayerManager::EndTransactionFlags) ()
at /usr/lib64/firefox/libxul.so
#12 0x00007ffff1c14053 in mozilla::layers::CompositorBridgeParent::CompositeToTarget(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::gfx::DrawTarget*, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const*) () at /usr/lib64/firefox/libxul.so
#13 0x00007ffff1c12fce in mozilla::layers::CompositorBridgeParent::ResumeComposition() () at /usr/lib64/firefox/libxul.so
#14 0x00007ffff1c13019 in mozilla::layers::CompositorBridgeParent::RecvResumeAsync() () at /usr/lib64/firefox/libxul.so
#15 0x00007ffff1441a82 in mozilla::layers::PCompositorBridgeParent::OnMessageReceived(IPC::Message const&) () at /usr/lib64/firefox/libxul.so
#16 0x00007ffff1446740 in mozilla::layers::PCompositorManagerParent::OnMessageReceived(IPC::Message const&) () at /usr/lib64/firefox/libxul.so
#17 0x00007ffff13a89fd in mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) () at /usr/lib64/firefox/libxul.so
#18 0x00007ffff13a95e2 in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) () at /usr/lib64/firefox/libxul.so
#19 0x00007ffff13aa1ae in mozilla::ipc::MessageChannel::MessageTask::Run() () at /usr/lib64/firefox/libxul.so
#20 0x00007ffff1371969 in MessageLoop::DoWork() () at /usr/lib64/firefox/libxul.so
#21 0x00007ffff137278a in base::MessagePumpDefault::Run(base::MessagePump::Delegate*) () at /usr/lib64/firefox/libxul.so
#22 0x00007ffff137114f in MessageLoop::Run() () at /usr/lib64/firefox/libxul.so
#23 0x00007ffff137b104 in base::Thread::ThreadMain() () at /usr/lib64/firefox/libxul.so
#24 0x00007ffff137819a in ThreadFunc(void*) () at /usr/lib64/firefox/libxul.so
#25 0x00007ffff7f7b3d7 in start_thread () at /lib64/libpthread.so.0
#26 0x00007ffff7ac4eff in clone () at /lib64/libc.so.6
The crash is still present in git master.